--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color:green;">
     <div class="container">
         <div class="row">
             <div class="col h1">Lorem, ipsum.</div>
             <div class="col h4"> Lorem ipsum dolor sit amet.</div>
         </div>
-        <div class="row accordion">
-            <div class="col accordion-item">
-                <h2 class="accordion-header" id="headingOne">
+        <div class="row accordion" style="background-color:#04b404;">
+            <div class="col accordion-item" style="background-color:#04b404;">
+                <h2 class="accordion-header" id="headingOne" style="background-color:#04b404;">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                         Despre Girafa
@@ -36,8 +36,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
+            <div class="col accordion-item" style="background-color:#04b404;">
+                <h2 class="accordion-header" id="headingTwo" style="background-color:#04b404;">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         Despre Cal
@@ -56,8 +56,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col accordion-item">
-                <h2 class="accordion-header" id="headingThree">
+            <div class="col accordion-item" style="background-color:#04b404;">
+                <h2 class="accordion-header" id="headingThree" style="background-color:#04b404;">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                         Despre Sconcs
@@ -98,7 +98,7 @@
                 <img src="skunk.png" class="card-img-top" alt="missing">
                 <div class="card-body">
                     <h5 class="card-title">Alege Sconcsul</h5>
-                    <p class="card-text">Miroase oribil, deci alunga orice</p>
+                    <p class="card-text">Miroase oribil, deci alunga orice si pe orice</p>
                     <a href="#" class="btn btn-primary">Pcik</a>
                 </div>
             </div>
